tests/fixtures/valid/ignored/builtins/bool.py
# Valid bool() calls
# Auto-generated by scripts/generate_tests.py

b0_bool_int = bool(1)
b1_bool_float = bool(1.0)
b2_bool_bool = bool(True)
b3_bool_str = bool("hello")
b4_bool_bytes = bool(b"hello")
b5_bool_list = bool([1, 2, 3])
b6_bool_dict = bool({"a": 1})
b7_bool_set = bool({1, 2, 3})
b8_bool_none = bool(None)

print("bool() tests passed!")
